# ribbon-lang

./: Cargo.toml  README.md  TODO.md
.github/workflows/: rust-clippy.yml
ribbon/: Cargo.toml
ribbon/src/: cli.rs  main.rs
ribbon_ast/: Cargo.toml
ribbon_ast/src/: ast.rs  bin_op.rs  lib.rs  pattern.rs  unary_op.rs
ribbon_error/: Cargo.toml
ribbon_error/src/: lib.rs
ribbon_lexer/: Cargo.toml
ribbon_lexer/src/: char_util.rs  cursor.rs  lexer.rs  lib.rs  span.rs  test.rs  tok.rs
ribbon_parser/: Cargo.toml
ribbon_parser/src/: denotation.rs  lib.rs  narrow.rs  parser.rs  prec.rs  sexpr_test.rs  test.rs
ribbon_parser/src/snapshots/: ribbon_parser__test__addition.snap  ribbon_parser__test__assignment.snap  ribbon_parser__test__basic_precedence.snap  ribbon_parser__test__binding.snap  ribbon_parser__test__binding_with_type_inference.snap  ribbon_parser__test__deref.snap  ribbon_parser__test__division.snap  ribbon_parser__test__empty_source.snap  ribbon_parser__test__enum_without_block.snap  ribbon_parser__test__eof_after_binary_operator.snap  ribbon_parser__test__fn_decl_start_or_unit_type.snap  ribbon_parser__test__function_with_parameters.snap  ribbon_parser__test__function_with_parameters_explicit_ret_type.snap  ribbon_parser__test__function_with_return_type.snap  ribbon_parser__test__invalid_function_parameter.snap  ribbon_parser__test__invalid_path.snap  ribbon_parser__test__invalid_tuple.snap  ribbon_parser__test__list.snap  (+22 more)
src/: cli.rs  error.rs  interp.rs  lexer.rs  lib.rs  main.rs  parser.rs  pos.rs
src/lexer/: token.rs
src/parser/: ast.rs
