[package]
name = "ribbon"
version = "0.0.0"
edition = "2021"
authors = ["Sam Thomas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
indenter = "0.3.3"

[dev-dependencies]
pretty_assertions = "1.2.1"
